[package]
name = "acme-dns-client"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Async client for joohoi/acme-dns API"
repository = "https://github.com/EnigmaCurry/rust-acme-dns-client"
readme = "../README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "src/**",
  "../README.md",
  "../LICENSE*",
]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
clap = { version = "4", features = ["derive", "env"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
anyhow = {version = "1.0.100", optional = true}

[dev-dependencies]
httpmock = "0.7"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.100"

[features]
default = []
cli = ["dep:clap","dep:tokio","dep:anyhow"]

[[bin]]
name = "acme-dns-cli"
path = "src/bin/acme-dns-cli.rs"
required-features = ["cli"]
